# puyodqn

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  screen_spec.md  spec.md
.github/: copilt-instructions.md
backend/python/: .dockerignore  Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt  test_ai.py
backend/python/ai/: advanced_loss.py  base_player.py  dense_reward.py  dqn_player.py  dqn_trainer.py  game_adapter.py  train_dqn.py  weak_cpu.py
backend/python/game_state/: __init__.py  board.py  game_state.py  puyo.py
backend/python/server/: main.py
backend/python/utils/: constants.py
doc/: README.md  ai-spec.md  api-spec.md  dqn-action-spec.md  dqn-reward-spec.md  game-rules.md  screen-spec.md  technical-spec.md  uv-guide.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChainEffect.tsx  GameBoard.css  GameBoard.tsx  MainMenu.css  MainMenu.tsx  NextDisplay.css  NextDisplay.tsx  OjamaPreview.css  OjamaPreview.tsx  PlayerSelect.css  PlayerSelect.tsx  RotationIndicator.tsx  TrainingActive.css  TrainingActive.tsx  TrainingConfig.css  TrainingConfig.tsx  TrainingMenu.css  TrainingMenu.tsx  TrainingResults.css  TrainingResults.tsx
frontend/src/hooks/: useChainAnimation.ts  useChainReactivation.ts  useChainTimer.ts  useCpuPlayer.ts  useGameLoop.ts  useKeyboard.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: game.ts
